<resources>
    <string name="app_name">BurguerApp</string>
    <string name="login">Login</string>
    <string name="email_address">Email</string>
    <string name="sing_up">Sing up</string>
    <string name="have_account">Already have an account? <font color='#E40000'><b>Login</b></font></string>
    <string name="no_have_account">Don\'t have an account? <font color='#E40000'><b>Sign Up</b></font></string>
    <string name="forgot_password">Forget password?</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="last_name">Last name</string>
</resources>